# pdfvision

./: .gitignore  README.md  README.py  pyproject.toml
src/pdfvision/: __init__.py  llama32.py  pdf_vision.py  pdf_vision_fallback.py
