[project]
name = "pdfvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Viglione", email = "daniel.viglione@atlanticgenetics.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
]

[project.scripts]
pdfvision = "pdfvision:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
